src/tess/tl/test/fail/test_fail_f_string_empty_expr.tl
#module main
#import <Print.tl>

main() {
    s := f"{}"
    0
}
